--- a/KSmoving System/pages/escortedForm.html
+++ b/KSmoving System/pages/escortedForm.html
@@ -148,11 +148,11 @@
             var $select = $("#status");
             if (escorted.Status != "") {
                 $('<option>', { value: escorted.Status, text: escorted.Status }).appendTo($select);
-                    }
-                    $('<option>', { value: "", text: "בחר " }).appendTo($select);
+            }
+            $('<option>', { value: "", text: "בחר " }).appendTo($select);
 
-                    $('<option>', { value: "פעיל", text: "פעיל " }).appendTo($select);
-                    $('<option>', { value: "לא פעיל", text: "לא פעיל " }).appendTo($select);
+            $('<option>', { value: "פעיל", text: "פעיל " }).appendTo($select);
+            $('<option>', { value: "לא פעיל", text: "לא פעיל " }).appendTo($select);
         }
 
         function generateStatus1() {
@@ -229,7 +229,7 @@
                 data: JSON.stringify({ displayName: displayName }),
                 success: function (data) {
                     var escorted = JSON.parse(data.d);
-                    GENERAL.ESCORTED.setEscortedList(escorted);
+                    GENERAL.ESCORTED.setEscortedList(JSON.stringify(escorted));
                     generateContactType(escorted)
                     generateStatus(escorted)
                     generateGender(escorted)
@@ -368,7 +368,6 @@
                                 <li><a href="viewHandlings.html">טיפולים</a></li>
                             </ul>
                         </li>-->
-
                         <!--<li class="has_sub">
                             <a href="javascript:void(0);" class="waves-effect waves-primary">
                                 <i class="md md-person"></i> <span> ניהול הנהגים </span>
@@ -379,8 +378,6 @@
                                 <li><a href="viewDriverConstrains.html">זמינות הנהגים</a></li>
                             </ul>
                         </li>-->
-
-
                         <!--<li>
                             <a href="viewReports.html" class="waves-effect waves-primary">
                                 <i class="md md-poll"></i><span> דוחות</span>
@@ -529,15 +526,15 @@
                                             </div>
                                         </div>
                                         <!--<div class="row m-l-10 m-r-10">
-                        <div class="col-sm-6">
-                            <div class="form-group">
-                                <label class="col-sm-3 control-label">סוג קרבה</label>
-                                <div class="col-sm-6">
-                                    <input id="contactType" name="contactType" type="text" class="form-control">
-                                </div>
-                            </div>
-                        </div>
-                    </div>-->
+                                            <div class="col-sm-6">
+                                                <div class="form-group">
+                                                    <label class="col-sm-3 control-label">סוג קרבה</label>
+                                                    <div class="col-sm-6">
+                                                        <input id="contactType" name="contactType" type="text" class="form-control">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>-->
                                         <div class="row m-l-10 m-r-10">
                                             <div class="col-sm-6">
                                                 <div class="form-group">
@@ -548,38 +545,39 @@
                                                 </div>
                                             </div>
                                             <div class="col-sm-6">
-                                            <div class="form-group">
-                                                <label class="col-sm-3 control-label">סטטוס מלווה</label>
-                                                <div class="col-sm-6" id="selectstatus">
-                                                    <select id="status" name="status" class="form-control"></select>
+                                                <div class="form-group">
+                                                    <label class="col-sm-3 control-label">סטטוס מלווה</label>
+                                                    <div class="col-sm-6" id="selectstatus">
+                                                        <select id="status" name="status" class="form-control"></select>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
-                                    </div>
-                                    <div class="row m-l-10 m-r-10">
-                                        <div class="col-sm-6">
-                                            <br />
-                                            <div class="col-md-6 checkbox checkbox-primary text-left">
-                                                <input id="activeescorted" type="checkbox" disabled>
-                                                <label for="activeescorted">
-                                                    מלווה פעיל
-                                                </label>
+                                        <div class="row m-l-10 m-r-10">
+                                            <div class="col-sm-6">
+                                                <br />
+                                                <div class="col-md-6 checkbox checkbox-primary text-left">
+                                                    <input id="activeescorted" type="checkbox" disabled>
+                                                    <label for="activeescorted">
+                                                        מלווה פעיל
+                                                    </label>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div id="addressesForm">
+                                            <hr />
+                                            <!--<table id="jqGrid" class="table table-striped table-bordered text-right"></table>
+                                            <div id="jqGridPager"></div>-->
+                                            <div class="text-right m-t-30 row">
+                                                <button type="submit" id="saveCustomer" class="btn btn-success waves-effect w-md waves-light m-b-5  m-r-15"><i class="ti-save m-r-5"></i>שמור</button>
                                             </div>
                                         </div>
                                     </div>
-                                    <!--<div id="addressesForm">
-                                        <hr />
-                                        <table id="jqGrid" class="table table-striped table-bordered text-right"></table>
-                                        <div id="jqGridPager"></div>
-                                        <div class="text-right m-t-30 row">
-                                            <button type="submit" id="saveCustomer" class="btn btn-success waves-effect w-md waves-light m-b-5  m-r-15"><i class="ti-save m-r-5"></i>שמור</button>
-                                        </div>
-                                    </div>-->
                                 </div>
                             </div>
                         </form>
-                        </div>
                     </div>
+                </div>
                 <!-- end container -->
             </div>
             <!-- end content -->
@@ -655,9 +653,11 @@
                     var contactType = $("#contactType").val();
                     var func = arr_customer.func;
                     if (cellphone2 == "") { cellphone2 = "0"; }
+                    var temp = GENERAL.ESCORTED.getEscortedList();
+
                     patient = { displayName: displayNamePat }
                     escorted = {
-                        pat: patient, displayName: displayName, firstNameH: firstNameH, firstNameA: nameA, lastNameH: lastNameH, lastNameA: lastNameA, addrees: city, cellPhone: cellPhone, cellphone2: cellphone2, homePhone: homePhone,
+                        pat: patient, id: JSON.parse(GENERAL.ESCORTED.getEscortedList()).Id, displayName: displayName, firstNameH: firstNameH, firstNameA: nameA, lastNameH: lastNameH, lastNameA: lastNameA, addrees: city, cellPhone: cellPhone, cellphone2: cellphone2, homePhone: homePhone,
                         status: status, contactType: contactType, gender: gender
                     }
                     $.ajax({
