--- a/KSmoving System/pages/viewRidePats.html
+++ b/KSmoving System/pages/viewRidePats.html
@@ -8,7 +8,7 @@
 
     <link rel="shortcut icon" href="assets/images/favicon_1.ico">
 
-    <title>לקוחות</title>
+    <title>הסעות חולים</title>
 
     <!-- DataTables -->
     <link href="../plugins/datatables/jquery.dataTables.min.css" rel="stylesheet" type="text/css" />
@@ -46,9 +46,6 @@
     <script>
         checkCookie();
         $(document).ready(function () {
-            //adds menu.html content into any "#menu" element
-            //$('#menu').load('menu.html');
-
             //Create a DataTable from the Table
             t = $('#datatable-buttons').DataTable();
 
@@ -58,72 +55,81 @@
 
         function refreshTable() {
             checkCookie();
-            var active = $("#activePatient").prop('checked');
+            var active = $("#activeCustomers").prop('checked');
 
             t.clear().draw();
 
             $.ajax({
                 dataType: "json",
-                url: "WebService.asmx/getPatients",
+                url: "WebService.asmx/GetRidePatView",
                 contentType: "application/json; charset=utf-8",
                 type: "POST",
-                data: JSON.stringify({active: active}),
+                data: JSON.stringify({ volunteerId: -1 }),
                 success: function (data) {
-                    var arr_patients = JSON.parse(data.d);
-                    //GENERAL.VOLUNTEERS.setvolunteersList(arr_volunteers);
+                    var arr_rides = JSON.parse(data.d);
+                    GENERAL.RIDEPAT.setRidePatList(arr_rides);
 
-                    for (i in arr_patients) {
+                    for (i in arr_rides) {
                         var btnStr = ""
                         var showBtn = "<button type='button' class='btn btn-icon waves-effect waves-light btn-success btn-sm m-b-5' id='show' title='פרטים נוספים'><i class='fa fa-wpforms'></i></button>";
                         var editBtn = "<button type='button' class='btn btn-icon waves-effect waves-light btn-primary btn-sm m-b-5' id='edit' title='ערוך'><i class='ti-pencil'></i></button>";
 
                         btnStr += showBtn + " " + editBtn;
 
-                        if (arr_patients[i].Status == "לא פעיל") {
+                        if (arr_rides[i].Status == "בוטלה") {
                             var reactiveBtn = "<button type='button' class='btn btn-icon waves-effect waves-light btn-warning btn-sm m-b-5' id='reactive' title='שחזר'><i class='fa fa-undo' ></i></button>";
                             btnStr += " " + reactiveBtn;
                         }
+                        else if (arr_rides[i].Status == "הסתיימה") {
+                            var reactiveBtn = "<button type='button' class='btn btn-icon waves-effect waves-light btn-default btn-sm m-b-5' id='reactive' title='הסתיימה'><i class='fa fa-check' ></i></button>";
+                            btnStr += " " + reactiveBtn;
+                        }
+
+                        // else if (arr_rides[i].Status == "משובצת") {
+                        //       var reactiveBtn = "<button type='button' class='btn btn-icon waves-effect waves-light btn-info btn-sm m-b-5' id='reactive' title='משובצת'><i class='fa fa-check' ></i></button>";
+                        // btnStr += " " + reactiveBtn;
+                        // }
                         else {
                             var deleteBtn = "<button type='button' class='btn btn-icon waves-effect waves-light btn-danger btn-sm m-b-5' id='remove' title='מחק'><i class='fa fa-remove' ></i></button>";
                             btnStr += " " + deleteBtn;
                         }
-
-
-                        t.row.add([arr_patients[i].DisplayName, arr_patients[i].CellPhone, arr_patients[i].Barrier.Name, arr_patients[i].Hospital.Name, arr_patients[i].BirthDate, arr_patients[i].Addition, btnStr]).draw(false);
-
+                        var temp = arr_rides[i].Date.substring(arr_rides[i].Date.indexOf("(") + 1);
+                        temp = temp.substring(0, temp.indexOf(")"));
+                        var date = new Date(parseInt(temp)).toLocaleString();
+                         t.row.add([arr_rides[i].Pat.DisplayName, arr_rides[i].Origin.Name, arr_rides[i].Destination.Name, date, arr_rides[i].Status, btnStr]).draw(false);
                     }
 
-                    t.columns([0]).order('asc').draw();
+                    t.columns([3]).order('asc').draw();
 
                     $('#datatable-buttons tbody').on('click', '#edit', function () {
                         var data = t.row($(this).parents('tr')).data();
                         arr_details = { displayName: data[0], func: "edit" };
-                        GENERAL.PATIENTS.setPatientsList(JSON.stringify(arr_details));
-                        location.href = "patientForm.html";
+                        GENERAL.RIDEPAT.setRidePatList(JSON.stringify(arr_details));
+                        location.href = "ridePatForm.html";
                     });
 
                     $('#datatable-buttons tbody').on('click', '#show', function () {
                         var data = t.row($(this).parents('tr')).data();
                         arr_details = { displayName: data[0], func: "show" };
-                        GENERAL.PATIENTS.setPatientsList(JSON.stringify(arr_details));
-                        location.href = "patientForm.html";
+                        GENERAL.RIDEPAT.setRidePatList(JSON.stringify(arr_details));
+                        location.href = "ridePatForm.html";
                     });
 
                     $('#datatable-buttons tbody').on('click', '#remove', function () {
                         var data = t.row($(this).parents('tr')).data();
                         swal({
-                            title: "אתה בטוח שברצונך למחוק את החולה:",
+                            title: "אתה בטוח שברצונך למחוק את ההסעה:",
                             type: "warning",
-                            text: data[0],
+                            text: data[1],
                             showCancelButton: true,
                             cancelButtonText: "בטל",
                             confirmButtonClass: 'btn-warning',
                             confirmButtonText: "מחק",
                             closeOnConfirm: false
                         }, function () {
-                            SetPatientStatus(data[0], 'false');
+                            deactivateRidePat(data[0], 'מוקפאת');
                             swal({
-                                title: "החולה הפך ללא פעיל",
+                                title: "ההסעה הפכה למוקפאת",
                                 timer: 1000,
                                 type: "success",
                                 showConfirmButton: false
@@ -135,18 +141,18 @@
                     $('#datatable-buttons tbody').on('click', '#reactive', function () {
                         var data = t.row($(this).parents('tr')).data();
                         swal({
-                            title: "אתה בטוח שברצונך לשחזר את החולה:",
+                            title: "אתה בטוח שברצונך לשחזר את ההסעה:",
                             type: "warning",
-                            text: data[0],
+                            text: data[1],
                             showCancelButton: true,
                             cancelButtonText: "בטל",
                             confirmButtonClass: 'btn-warning',
                             confirmButtonText: "שחזר",
                             closeOnConfirm: false
                         }, function () {
-                            SetPatientStatus(data[0], 'true');
+                            deactivateRidePat(data[0], 'ממתינה לשיבוץ');
                             swal({
-                                title: "החולה הפך לפעיל",
+                                title: "ההסעה הפכה לממתינה לשיבוץ",
                                 timer: 1000,
                                 type: "success",
                                 showConfirmButton: false
@@ -156,29 +162,29 @@
 
                     });
                 },
-                error: function (err) { alert("Error in getPatients"); }
+                error: function (err) { alert("Error in GetRidePatView"); }
             });
         }
 
-        function deactivatePatient(displayName, active) {
+        function deactivateRidePat(ridePatNum, active) {
             checkCookie();
             $.ajax({
                 dataType: "json",
-                url: "WebService.asmx/SetPatientStatus",
+                url: "WebService.asmx/deactivateRidePat",
                 contentType: "application/json; charset=utf-8",
                 type: "POST",
-                data: JSON.stringify({ displayName: displayName, active: active }),
+                data: JSON.stringify({ ridePatNum: ridePatNum, active: active }),
                 success: function (data) { },
-                error: function (err) { alert("Error in SetPatientStatus"); }
+                error: function (err) { alert("Error"); }
             });
 
         }
 
-        function newPatientForm() {
-            displayName = " ";
-            arr_details = { displayName: displayName, func: "new" };
-            GENERAL.PATIENTS.setPatientsList(JSON.stringify(arr_details));
-            location.href = "patientForm.html";
+        function newRidePatForm() {
+            ridePatNum = " ";
+            arr_details = { ridePatNum: ridePatNum, func: "new" };
+            GENERAL.RIDEPAT.setRidePatList(JSON.stringify(arr_details));
+            location.href = "ridePatForm.html";
         }
 
     </script>
@@ -219,17 +225,9 @@
                         <!-- LOGO -->
                         <div class="pull-left">
                             <div class="text-center">
-                                <a href="index.html" class="logo"><span>בדרך להחלמה</span>&nbsp&nbsp&nbsp<i class="ti-truck"></i>  </a>
+                                <a href="index.html" class="logo"><span>בדרך להחלמה</span>&nbsp&nbsp&nbsp</a>
                             </div>
                         </div>
-
-
-
-                        <!--Search-->
-                        <!--<form role="search" class="navbar-right app-search pull-right hidden-xs">
-                            <input type="text" placeholder="חיפוש..." class="form-control app-search-input">
-                            <a href=""><i class="fa fa-search"></i></a>
-                        </form>-->
                     </div>
                     <!--/.nav-collapse -->
                 </div>
@@ -250,23 +248,9 @@
                                 <i class="md md-dashboard"></i><span> דף הבית </span>
                             </a>
                         </li>
-
-                        <!--<li class="has_sub">
-                            <a href="javascript:void(0);" class="waves-effect waves-primary">
-                                <i class="md md-wallet-travel"></i> <span> ניהול הזמנות </span>
-                                <span class="menu-arrow"></span>
-                            </a>
-                            <ul class="list-unstyled">
-                                <li><a href="viewOrders.html">הזמנות</a></li>
-                                <li><a href="viewDocuments.html">מסמכים</a></li>
-                                <li><a href="viewInvoices.html">חשבוניות</a></li>
-                                <li><a href="viewServices.html">מחירונים</a></li>
-                            </ul>
-                        </li>-->
-
                         <li>
                             <a href="viewVolunteer.html" class="waves-effect waves-primary">
-                                <i class="md md-today"></i><span> ניהול מתנדבים</span>
+                                <i class="md md-person"></i><span> ניהול מתנדבים</span>
                             </a>
                         </li>
 
@@ -275,36 +259,11 @@
                                 <i class="md md-recent-actors"></i><span> ניהול חולים</span>
                             </a>
                         </li>
-
-                        <!--<li class="has_sub">
-                            <a href="javascript:void(0);" class="waves-effect waves-primary">
-                                <i class="md md-local-shipping"></i> <span> ניהול משאיות </span>
-                                <span class="menu-arrow"></span>
-                            </a>
-                            <ul class="list-unstyled">
-                                <li><a href="viewTrucks.html">משאיות</a></li>
-                                <li><a href="viewHandlings.html">טיפולים</a></li>
-                            </ul>
-                        </li>
-
-                        <li class="has_sub">
-                            <a href="javascript:void(0);" class="waves-effect waves-primary">
-                                <i class="md md-person"></i> <span> ניהול הנהגים </span>
-                                <span class="menu-arrow"></span>
-                            </a>
-                            <ul class="list-unstyled">
-                                <li><a href="viewDrivers.html">נהגים</a></li>
-                                <li><a href="viewDriverConstrains.html">זמינות הנהגים</a></li>
-                            </ul>
-                        </li>
-
-
                         <li>
-                            <a href="viewReports.html" class="waves-effect waves-primary">
-                                <i class="md md-poll"></i><span> דוחות</span>
+                            <a href="viewRidePats.html" class="waves-effect waves-primary">
+                                <i class="md md-today"></i><span> ניהול הסעות</span>
                             </a>
-                        </li>-->
-
+                        </li>
 
                     </ul>
                     <div class="clearfix"></div>
@@ -329,9 +288,9 @@
                             <div class="page-title-box">
                                 <ol class="breadcrumb pull-right">
 
-                                    <li class="active">ניהול חולים</li>
+                                    <li class="active">ניהול הסעות חולים</li>
                                 </ol>
-                                <h4 class="page-title">ניהול חולים&nbsp&nbsp<i class="md md-recent-actors"></i></h4>
+                                <h4 class="page-title">ניהול הסעות חולים&nbsp&nbsp<i class="md md-recent-actors"></i></h4>
                             </div>
                         </div>
                     </div>
@@ -344,40 +303,42 @@
 
                                 <div class="row">
                                     <div class="col-sm-8">
-                                        <h4 class="m-t-0 header-title"><b>טבלת חולים</b></h4>
+                                        <h4 class="m-t-0 header-title"><b>טבלת הסעות חולים</b></h4>
                                         <p class="text-muted font-13 m-b-30">
-                                            מבט כללי על החולים שבוצעו, ניתן לצפות בפרטים נוספים בלחיצה על כפתור ההרחבה.
+                                            מבט כללי על ההסעות חולים שבוצעו, ניתן לצפות בפרטים נוספים בלחיצה על כפתור ההרחבה.
                                         </p>
                                     </div>
-                                    <div class="col-sm-4 text-right">
+                                    <div class="col-sm-5 text-right">
                                         <button type='button' class='btn btn-icon waves-effect waves-light btn-success btn-sm m-b-5' id='show' title='פרטים נוספים'><i class='fa fa-wpforms'></i></button> צפייה
                                         <button type='button' class='btn btn-icon waves-effect waves-light btn-primary btn-sm m-b-5' id='edit' title='ערוך'><i class='ti-pencil'></i></button> ערוך
                                         <button type='button' class='btn btn-icon waves-effect waves-light btn-danger btn-sm m-b-5' id='remove' title='מחק'><i class='fa fa-remove'></i></button> מחק
                                         <button type='button' class='btn btn-icon waves-effect waves-light btn-warning btn-sm m-b-5' id='reactive' title='שחזר'><i class='fa fa-undo'></i></button> שחזר
+                                        <button type='button' class='btn btn-icon waves-effect waves-light btn-default btn-sm m-b-5' id='reactive' title='הסעה בוצעה'><i class='fa fa-check'></i></button> בוצעה
+                                        <button type='button' class='btn btn-icon waves-effect waves-light btn-info btn-sm m-b-5' id='reactive' title='משובצת'><i class='fa fa-check'></i></button>משובצת
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="col-sm-3 checkbox checkbox-primary text-left">
-                                        <input id="activePatient" type="checkbox" onchange="refreshTable()" checked>
-                                        <label for="activePatient">
-                                            חולים פעילים בלבד
+                                        <input id="activeCustomers" type="checkbox" onchange="refreshTable()" checked>
+                                        <label for="activeCustomers">
+                                            הסעות חולים שלא בוצעו
                                         </label>
                                     </div>
 
                                     <div class="col-sm-9 text-right ">
-                                        <button type="button" id="createCustomer" onclick="newPatientForm()" class="btn btn-success waves-effect w-md waves-light m-b-5"><span class="glyphicon glyphicon-plus-sign m-r-5"></span>חדש</button>
+                                        <button type="button" id="createCustomer" onclick="newRidePatForm()" class="btn btn-success waves-effect w-md waves-light m-b-5"><span class="glyphicon glyphicon-plus-sign m-r-5"></span>חדש</button>
                                     </div>
                                 </div>
                                 <table id="datatable-buttons" class="table table-striped table-bordered">
                                     <thead>
                                         <tr>
-                                            <th>שם</th>
-                                            <th>טלפון</th>
-                                            <th>מחסום</th>
-                                            <th>בית חולים</th>
-                                            <th>תאריך לידה</th>
-                                            <th>כלי עזר</th>
-                                            <th>ערוך חולה</th>
+                                            <!--<th>מספר הסעה</th>-->
+                                            <th>שם החולה</th>
+                                            <th>מוצא</th>
+                                            <th>יעד</th>
+                                            <th>תאריך ושעה</th>
+                                            <th>סטטוס הנהגים בנסיעה</th>
+                                            <th>ערוך דרישה</th>
                                         </tr>
                                     </thead>
                                     <tbody></tbody>
@@ -396,7 +357,7 @@
             <!-- end content -->
             <!-- FOOTER -->
             <footer class="footer text-right">
-                2016 © KSmoving Management System Powered by Neta Reuveni, Hanan Ben Shitrit, Sharon Krepner
+                2018 © Road To Decovery Management System Powered by Sufa Ben-Horin
             </footer>
             <!-- End FOOTER -->
 
