--- a/KSmoving System/pages/login.html
+++ b/KSmoving System/pages/login.html
@@ -18,7 +18,7 @@
         <link href="assets/css/pages.css" rel="stylesheet" type="text/css">
         <link href="assets/css/menu.css" rel="stylesheet" type="text/css">
         <link href="assets/css/responsive.css" rel="stylesheet" type="text/css">
-
+        <script src="lib/master.js"></script>
         <style type="text/css">
             .wrapper-page {
                 background-color: #3bafda;
@@ -227,7 +227,7 @@
                                 setTimeout(function () {
                                     location.href = "index.html";
                                 }, 1001);
-
+                                GENERAL.USER.setUserName(userName);
                             }
                             else {
                                 swal({
